# docs/swagger.yaml
@@ -291,11 +291,6 @@ paths:
         name: clientCode
         required: true
         type: string
-      - description: Session key
-        in: query
-        name: sessionKey
-        required: true
-        type: string
       - description: Customer ID
         in: query
         name: customerID
@@ -308,6 +303,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.CustomerResponse'
+      security:
+      - SessionKeyAuth: []
       summary: Get customer information by customer ID.
   /getCustomers:
     post:
@@ -318,11 +315,6 @@ paths:
         name: clientCode
         required: true
         type: string
-      - description: Session key
-        in: query
-        name: sessionKey
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -330,6 +322,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.CustomerResponse'
+      security:
+      - SessionKeyAuth: []
       summary: Get customer information
   /getSessionKeyInfo:
     post:
@@ -341,11 +335,6 @@ paths:
         name: clientCode
         required: true
         type: string
-      - description: Session key
-        in: query
-        name: sessionKey
-        required: true
-        type: string
       produces:
       - application/json
       responses:
@@ -353,6 +342,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.GetSessionKeyInfoResponse'
+      security:
+      - SessionKeyAuth: []
       summary: Get session key information
   /saveCustomer:
     post:
@@ -361,11 +352,6 @@ paths:
       - description: Client code
         in: query
         name: clientCode
-        required: true
-        type: string
-      - description: Session key
-        in: query
-        name: sessionKey
         required: true
         type: string
       - description: Full name
@@ -390,6 +376,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.SaveCustomerResponse'
+      security:
+      - SessionKeyAuth: []
       summary: Save customer information
   /verifyUser:
     post:
@@ -418,4 +406,9 @@ paths:
           schema:
             $ref: '#/definitions/models.Response'
       summary: Verify user credentials
+securityDefinitions:
+  SessionKeyAuth:
+    in: header
+    name: sessionKey
+    type: apiKey
 swagger: "2.0"
